# Nemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: CompileOptions.cmake
CMake/Modules/: FindAssimp.cmake  FindTBB.cmake  ModuleHelper.cmake  TripletHelper.cmake
ExperimentRealm/: BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  EditorMaster.h  EntityLibrary.cpp  EntityLibrary.h  EntityManager.cpp  EntityManager.h  Gizmo.cpp  Gizmo.h  InputEvent.h  InputEventFromSDL2.h  InputHandler.cpp  InputHandler.h  InteractionSystem.cpp  InteractionSystem.h  KeySym.h  NodeGraph.cpp  NodeGraph.h  OpenGL.h  RayVisualize.cpp  RayVisualize.h  RenderComponent.h  Shader.cpp  Shader.h  UVSphere.cpp  UVSphere.h  main.cpp
ExperimentRealm/imgui/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
Foundation/: CMakeLists.txt
Foundation/Private/: Clock.cpp  Log.cpp  PathTools.cpp  StringUtils.cpp  Timeline.cpp
Foundation/Public/: EnumClass.h  Foundation.h  LangUtils.h  Log.h  MemoryPool.h  PathTools.h  Pointer.h  StringUtils.h  Timeline.h  UsingStl.h  VectorPool.h
Math/: AreaAllocator.cpp  AreaAllocator.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Color.cpp  Color.h  Frustum.cpp  Frustum.h  MathDefs.cpp  MathDefs.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.h  PODVector.h  Plane.cpp  Plane.h  Polyhedron.cpp  Polyhedron.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  StringHash.cpp  StringHash.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  (+2 more)
Nemo/: BezierCurve.cpp  BezierCurve.h  BezierSegment.cpp  BezierSegment.h  CMakeLists.txt  DumbRenderer.cpp  DumbRenderer.h  EditorMaster.h  Engine.h  EntityLibrary.h  EntityManager.cpp  EntityManager.h  FirstPersonCameraController.cpp  FirstPersonCameraController.h  Gizmo.h  InputEvent.h  InputEventFromSDL2.h  InputHandler.cpp  InputHandler.h  InteractionSystem.cpp  InteractionSystem.h  MainLoop.cpp  Mesh.cpp  Mesh.h  NemoRoot.cpp  NemoRoot.h  NemoSceneNode.cpp  NemoSceneNode.h  NodeFactory.cpp  NodeFactory.h  NodeGraph.cpp  PrimitiveRenderer.cpp  PrimitiveRenderer.h  RayVisualize.cpp  RayVisualize.h  RenderComponent.h  RenderTarget.cpp  RenderTarget.h  RenderableDumbStaticModel.cpp  RenderableDumbStaticModel.h  (+19 more)
Nemo/ECS/: Component.h  ComponentInterface.h  ComponentStaticRegister.cpp  ComponentStaticRegister.h  Entity.cpp  Entity.h  EntityCommon.h  EntityManager.cpp  EntityManager.h  GeometryComponent.cpp  GeometryComponent.h  SystemBase.h  SystemInterface.h  TransformComponent.cpp  TransformComponent.h
Nemo/Physics/: Physics.h  PhysicsComponent.cpp  PhysicsSystem.cpp
Nemo/Render/: RenderSystem.cpp  RenderSystem.h  VertexFactory.cpp  VertexFactory.h
Nemo/imgui/: imconfig.h  imgui_impl_sdl_gl3.cpp
OpenGLRHI/: CMakeLists.txt
OpenGLRHI/Private/: OpenGLRHI.cpp  OpenGLState.cpp  Shader.cpp  Shader.h  VAO.h
OpenGLRHI/Public/: OpenGLRHI.h
RHI/: CMakeLists.txt
RHI/Private/: RHIResources.cpp
RHI/Public/: RHI.h  RHIDefinitions.h  RHIResources.h
RHIDemo/: CMakeLists.txt  Main.cpp
Resource/: CMakeLists.txt
Resource/Private/: BaseMesh.cpp  File.cpp  Image.cpp  Mesh.cpp  Resource.cpp  ResourceFactory.cpp  ResourceManager.cpp  StaticMesh.cpp
Resource/Public/: BaseMesh.h  File.h  Image.h  Mesh.h  Resource.h  ResourceFactory.h  ResourceManager.h  StaticMesh.h
SceneMgr/: CMakeLists.txt
SceneMgr/Private/: Camera.cpp  Node.cpp  OctreeSceneManager.cpp  Scene.cpp  SceneAttachment.cpp  SceneManager.cpp  SceneNode.cpp  View.cpp
SceneMgr/Public/: Camera.h  FrameRenderInfo.h  Geometry.h  Node.h  OctreeSceneManager.h  Scene.h  SceneAttachment.h  SceneManager.h  SceneNode.h  View.h
